--- a/style.css
+++ b/style.css
@@ -246,3 +246,18 @@ gap: 10px;
     margin: 0;
 
 }
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn2{
+    color: #10C98F;
+    border: 2px solid #10C98F;
+    display: inline-block;
+    padding: 15px 40px;
+    text-transform: uppercase;
+    font-size: 16px;
+    background: none;
+    font-weight: 600;
+}
