--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ h3{
 #banner3{
     width: 100%;
     height: 100vh;
-    background-color: hotpink;
+    /* background-color: hotpink; */
 }
 .sec2{
     display: flex;
@@ -165,13 +165,13 @@ h3{
 .picture2{
     width: 460px;
     height: 480px;
-    background-color: chartreuse;
+    /* background-color: chartreuse; */
     position: relative;
 }
 .picture22{
     /* width: 200px; */
     /* height: 200px; */
-    background-color: dimgray;
+    background: #10C98F;
     display: inline-block;
     padding: 63px 47px;
     position: absolute;
@@ -190,7 +190,7 @@ h4{
 .info2{
     width: 450px;
     height: 550px;
-    background-color: coral;
+    /* background-color: coral; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,7 +213,7 @@ h5{
 }
 .div1{
     width: 450px;
-    background-color: aqua;
+    /* background-color: aqua; */
     margin-bottom:10px ;
     display: flex;
     flex-direction: row;
@@ -221,7 +221,7 @@ h5{
 }
 .div2{
     width: 450px;
-    background-color: red;
+    /* background-color: red; */
     margin-bottom:10px ;
     display: flex;
     flex-direction: row;
@@ -229,7 +229,7 @@ h5{
 }
 .div3{
     width: 450px;
-    background-color: burlywood;
+    /* background-color: burlywood; */
     margin-bottom:10px ;
     display: flex;
     flex-direction: row;
